[project]
name = "sonarr-animedownloader"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "apiflask==3.1.0",
    "fastapi==0.136.1",
    "flask==3.1.3",
    "flask-socketio>=5.6.1",
    "httpx==0.28.1",
    "requests>=2.33.1",
    "tenacity==9.1.4",
    "uvicorn==0.46.0",
    "werkzeug>=3.0.6",
]
